# bit.LOCK-public

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/agents/: deploy-engineer.md  desktop-dev.md  orchestrator.md  qa-engineer.md
.claude/rules/: design-quality.md  desktop.md  workflow.md
.claude/skills/architecture/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/electron-auto-update/: SKILL.md
.claude/skills/electron-best-practices/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/requirements/: SKILL.md
.claude/skills/tauri-auto-update/: SKILL.md
.claude/skills/tauri-best-practices/: SKILL.md
.claude/skills/ux/: SKILL.md
.github/workflows/: build.yml
features/: INDEX.md  LOCK-1-pdf-komprimierung.md  LOCK-1-vollstaendige-signierung.md  LOCK-2-bitsign-integration.md
src/: App.jsx  api.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: qpdf-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compress.rs  crypto.rs  database.rs  encryption.rs  font_subset.rs  lib.rs  mail.rs  main.rs  merge.rs  settings.rs  sign.rs
src/components/: CompressFlow.jsx  EncryptView.jsx  HistoryView.jsx  MergeFlow.jsx  SettingsView.jsx  Sidebar.jsx  SignFlow.jsx  TitleBar.jsx  UpdateBanner.jsx  WizardFlow.jsx
src/main/: database.js  encryption.js  index.js  outlook.js
src/preload/: index.js
src/renderer/: index.html
src/utils/: password.js
(+18 files in other folders)
